--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "prisma:d": "npx prisma migrate deploy",
     "db:rm": "docker compose rm dev-db -s -f -v",
     "db:up": "docker compose up dev-db -d",
-    "db:re": "yarn db:rm && yarn db:up && yarn prisma:d",
+    "re": "yarn db:rm && yarn db:up && yarn prisma:d",
+    "prisma:test:d": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "db:test:rm": "docker compose rm test-db -s -f -v",
+    "db:test:up": "docker compose up test-db -d",
+    "re:test": "yarn db:test:rm && yarn db:test:up && yarn prisma:test:d",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -22,7 +26,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "pretest:e2e": "yarn re:test",
+    "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -52,10 +57,12 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "pactum": "^3.2.4",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
